--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
+    "mongoose-unique-validator": "^4.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
