--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "mongoose-unique-validator": "^4.0.1",
