--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "mongoose-unique-validator": "^4.0.1",
+    "multer": "^1.4.5-lts.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "sharp": "^0.33.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
