--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "axios": "^1.2.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.0",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
